--- a/templates/stats.html
+++ b/templates/stats.html
@@ -52,7 +52,7 @@
     border-radius: var(--radius-lg);
     padding: 1.5rem;
     margin-bottom: 1.5rem;
-    min-height: 400px;
+    min-height: 40vh;
 }
 
 .chart-container h4 {
